<resources>
    <string name="app_name">Chats_Kotlin</string>
    <string name="default_web_client_in">118183161980-eec8g9mca62kp252fli6945re483l34e.apps.googleusercontent.com</string>

    <string name="item_perfil">Perfil</string>
    <string name="item_usuarios">Usuarios</string>
    <string name="item_chats">Chats</string>
    <string name="tv_Titulo">Titulo</string>
    <string name="opcionEmail">Continuar con Email</string>
    <string name="opcionGoogle">Continuar con Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- loginEmailComponents -->
    <string name="txt_Login">Login</string>
    <string name="et_Email">Correo Electronico</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="txt_no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="tv_registrarme">Registrarme</string>

    <string name="txt_registro">Registro</string>
    <string name="et_nombres">Nombres</string>
    <string name="et_r_password">Repita la contraseña</string>

    <string name="btn_cerrarSesion">Cerrar Sesion</string>
    <string name="btn_registrar">Registrarse</string>

    <!-- Recursos del fragmento perfil -->
    <string name="txt_nombres">Nombres: </string>
    <string name="tv_nombres"> -- </string>
    <string name="txt_email">Email: </string>
    <string name="tv_email"> -- </string>
    <string name="txt_proveedor">Proveedor: </string>
    <string name="tv_proveedor"> -- </string>
    <string name="txt_t_registro">Miembro desde: </string>
    <string name="tv_t_registro"> -- </string>


</resources>